# shamirgui

./: .gitignore  CMakeLists.txt  README.md  default.nix  shell.nix
.github/workflows/: buildtest.yml
shamirlib/: shamir.cpp
src/: main.cpp  point.cpp  point.h  pointlist.cpp  pointlist.h  shamir.h  window.cpp  window.h
tests/: CMakeLists.txt  shamirtest.cpp
